apps/opentelemetrycollector/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logs-gateway-collector-otlp-http
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - logs-gateway.home.alden.ai
  rules:
  - backendRefs:
    - name: logs-gateway-collector
      port: 4318
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /v1/logs
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logs-agent-collector-zpages
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - logs-agent-collector.home.alden.ai
  rules:
  - backendRefs:
    - name: logs-agent-collector
      port: 55679
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logs-gateway-collector-zpages
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - logs-gateway-collector.home.alden.ai
  rules:
  - backendRefs:
    - name: logs-gateway-collector
      port: 55679
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-events-collector-zpages
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - kubernetes-events-collector.home.alden.ai
  rules:
  - backendRefs:
    - name: kubernetes-events-collector
      port: 55679
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otlp-collector-zpages
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - otlp-collector.home.alden.ai
  rules:
  - backendRefs:
    - name: otlp-collector
      port: 55679
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trace-collector-zpages
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - trace-collector.home.alden.ai
  rules:
  - backendRefs:
    - name: trace-collector
      port: 55679
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
