apps/opentelemetrycollector/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: logs-agent-collector-zpages
spec:
  hosts:
    - logs-agent-collector.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: logs-agent-collector.observability.svc.cluster.local
            port:
              number: 55679
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: logs-gateway-collector-zpages
spec:
  hosts:
    - logs-gateway-collector.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: logs-gateway-collector.observability.svc.cluster.local
            port:
              number: 55679
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kubernetes-events-collector-zpages
spec:
  hosts:
    - kubernetes-events-collector.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kubernetes-events-collector.observability.svc.cluster.local
            port:
              number: 55679
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: otlp-collector-zpages
spec:
  hosts:
    - otlp-collector.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: otlp-collector.observability.svc.cluster.local
            port:
              number: 55679
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: trace-collector-zpages
spec:
  hosts:
    - trace-collector.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: trace-collector.observability.svc.cluster.local
            port:
              number: 55679
